--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,16 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root{
+  --color-white:#ffffff;
+  --color-black:#000000;
+  --color-light:#C9C6C6;
+  --color-dark:#242424;
 }
+body.light-theme{
+  --color-white:#000000;
+  --color-black:#ffffff;
+  --color-light:#242424;
+  --color-dark:#C9C6C6;
+}
+
