--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -7,10 +7,13 @@ html{
     font-size: 62.5%;
 }
 body {
-    font-family: $font-body;
+    position: relative;
+    font-family: 'Poppins', sans-serif;
     font-size: $body-font-size;
     color: $color-body;
     overflow-x: hidden;
+    width: 100%;
+    height: 100%;
 }
 .huy{
     color:red
@@ -20,9 +23,19 @@ section {
     padding-top: 110px;
     padding-bottom: 110px;
 }
+.wrapper{
+    position: relative;
+    width: 1280px;
+    height:100vh;
+    background: $color-dark;
+    max-width:1280px;
+    margin: auto;
+    transition: opacity 1s ease 1s;
+}
 
 img {
     max-width: 100%;
+    width:100%;
 }
 
 /*-------------------------
@@ -51,9 +64,19 @@ textarea {
 select {
     background-color: transparent;
 }
-
+a{
+    color:$color-white!important;
+    text-decoration: none!important;
+}
+a:hover{
+    text-decoration: none!important;
+}
+@media (min-width: 1400px){
+    .container {
+        max-width: 1140px!important;
+    }
+}
 @media (min-width: 1200px) {
-    
 }
 
 @media (min-width: 768px) and (max-width: 1200px) {
