--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -5,30 +5,28 @@
 ---------------------------*/
 html{
     font-size: 62.5%;
+    cursor:none;
 }
 body {
     position: relative;
     font-family: 'Poppins', sans-serif;
-    font-size: $body-font-size;
+    font-size: 1vw!important;
     color: $color-body;
     overflow-x: hidden;
     width: 100%;
     height: 100%;
+    pointer-events: none;
 }
 .huy{
     color:red
 }
 section {
     position: relative;
-    padding-top: 110px;
-    padding-bottom: 110px;
 }
 .wrapper{
     position: relative;
-    width: 1280px;
-    height:100vh;
+    height:100%;
     background: $color-dark;
-    max-width:1280px;
     margin: auto;
     transition: opacity 1s ease 1s;
 }
@@ -37,7 +35,9 @@ img {
     max-width: 100%;
     width:100%;
 }
-
+::-webkit-scrollbar {
+    width: 0px;
+}
 /*-------------------------
      RESET Default Styles
  --------------------------*/
@@ -70,6 +70,9 @@ a{
 }
 a:hover{
     text-decoration: none!important;
+}
+h1,h2,h3{
+    font-family: Ogg, "Cormorant Upright", serif;
 }
 @media (min-width: 1400px){
     .container {
