--- a/client/src/scss/pages/_footer.scss
+++ b/client/src/scss/pages/_footer.scss
@@ -4,19 +4,18 @@
     bottom:0;
     left:0;
     width: 100%;
-    padding-bottom: 50px;
+    padding: 0 7vw 4vw 7vw;
     color:$color-white;
-    font-size: 1.5rem;
     font-weight: 400;
     z-index: 99;
     .footer-socials{
         div{
             i{
-                font-size: 18px;
+                font-size: 1.4vw;
             }
         }
         div + div{
-            margin-top: 15px;
+            margin-top: 1vw;
         }
     }
 }
