--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -19,37 +19,38 @@
       Global Styles
 ---------------------------*/
 html {
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  cursor: none; }
 
 body {
   position: relative;
   font-family: 'Poppins', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1vw !important;
   color: #ffffff;
   overflow-x: hidden;
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  pointer-events: none; }
 
 .huy {
   color: red; }
 
 section {
-  position: relative;
-  padding-top: 110px;
-  padding-bottom: 110px; }
+  position: relative; }
 
 .wrapper {
   position: relative;
-  width: 1280px;
-  height: 100vh;
+  height: 100%;
   background: var(--color-dark);
-  max-width: 1280px;
   margin: auto;
   transition: opacity 1s ease 1s; }
 
 img {
   max-width: 100%;
   width: 100%; }
+
+::-webkit-scrollbar {
+  width: 0px; }
 
 /*-------------------------
      RESET Default Styles
@@ -80,6 +81,9 @@ a {
 a:hover {
   text-decoration: none !important; }
 
+h1, h2, h3 {
+  font-family: Ogg, "Cormorant Upright", serif; }
+
 @media (min-width: 1400px) {
   .container {
     max-width: 1140px !important; } }
@@ -107,6 +111,18 @@ a:hover {
 /*-------------------------
    Font Size & Font Weight
 --------------------------*/
+@font-face {
+  font-family: Ogg;
+  src: url("../../asset/fonts/Ogg-Regular.woff2") format("woff2"), url("../../asset/fonts/Ogg-Regular.woff2") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
+@font-face {
+  font-family: "Cormorant Upright";
+  src: url("../../asset/fonts/CormorantUpright-Regular.ttf") format("woff2"), url("../../asset/fonts/CormorantUpright-Regular.ttf") format("woff");
+  font-weight: 400;
+  font-style: normal; }
+
 /* Font Size */
 .font--80 {
   font-size: 8rem; }
@@ -121,20 +137,33 @@ a:hover {
   top: 0;
   left: 0;
   width: 100%;
-  padding-top: 50px;
+  padding: 4vw 7vw 0 7vw;
   color: var(--color-white);
-  font-size: 1.5rem;
   font-weight: 400;
   z-index: 99; }
-  .header .header-logo__img {
-    width: 25px;
-    transition: 0.5s;
-    cursor: pointer; }
-    .header .header-logo__img:hover {
-      transform: scale(1.1); }
-  .header .header-logo__text {
-    font-weight: 500;
-    margin-left: 15px; }
+  .header .header-logo {
+    position: relative; }
+    .header .header-logo__img {
+      width: 1.953vw;
+      transition: 0.5s;
+      cursor: pointer; }
+      .header .header-logo__img:hover {
+        transform: scale(1.1); }
+    .header .header-logo__text {
+      font-weight: 500;
+      margin-left: 1vw; }
+    .header .header-logo__before {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      width: 100px;
+      height: 100px;
+      border-radius: 100%;
+      opacity: 0;
+      visibility: hidden; }
+    .header .header-logo .light-click {
+      background: var(--color-light);
+      animation: lightclick 500ms  ease; }
   .header .header-project {
     cursor: pointer; }
 
@@ -144,21 +173,20 @@ a:hover {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding-bottom: 50px;
+  padding: 0 7vw 4vw 7vw;
   color: var(--color-white);
-  font-size: 1.5rem;
   font-weight: 400;
   z-index: 99; }
   .footer .footer-socials div i {
-    font-size: 18px; }
+    font-size: 1.4vw; }
   .footer .footer-socials div + div {
-    margin-top: 15px; }
+    margin-top: 1vw; }
 
 /*==================== NOISE ====================*/
 .noise::before {
   position: fixed;
   top: 0;
-  left: 0;
+  left: -1px;
   width: 100vw;
   height: 100vh;
   content: "";
@@ -166,3 +194,56 @@ a:hover {
   z-index: 1000;
   pointer-events: none;
   background-image: url("../../asset/image/noise.gif"); }
+
+/*==================== CURSOR ====================*/
+.hover-cursor {
+  transition: all 0.3s ease; }
+  .hover-cursor:hover ~ .cursor {
+    transform: translate(-50%, -50%) scale(8); }
+
+.cursor {
+  height: 50px;
+  width: 50px;
+  border: 2px solid var(--color-white);
+  border-radius: 50%;
+  position: absolute;
+  transform-origin: 100% 100%;
+  box-sizing: border-box;
+  transition: opacity 1s ease;
+  backdrop-filter: grayscale(1);
+  pointer-events: none;
+  z-index: 999; }
+
+.follower {
+  height: 8px;
+  width: 8px;
+  background: var(--color-white);
+  border-radius: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  transition: opacity .2s ease;
+  z-index: 999; }
+
+.cursorBlock {
+  opacity: 1; }
+
+.cursorNone {
+  opacity: 0; }
+
+@media (max-width: 900px) {
+  .hover-cursor {
+    width: 100%;
+    padding: 20px 0;
+    display: inline-block; } }
+
+/*==================== HOME ====================*/
+.home {
+  padding: 200px 0; }
+  .home .home-text {
+    width: 80%;
+    margin: auto;
+    color: var(--color-white); }
+    .home .home-text h2 {
+      word-break: break-all;
+      font-size: 8rem;
+      margin: 0; }
