--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,13 +9,13 @@ body {
 :root{
   --color-white:#ffffff;
   --color-black:#000000;
-  --color-light:#C9C6C6;
-  --color-dark:#242424;
+  --color-light:#eaeaea;
+  --color-dark:#1a1a1a;
 }
 body.light-theme{
   --color-white:#000000;
   --color-black:#ffffff;
-  --color-light:#242424;
-  --color-dark:#C9C6C6;
+  --color-light:#1a1a1a;
+  --color-dark:#eaeaea;
 }
 
