--- a/client/src/scss/pages/_header.scss
+++ b/client/src/scss/pages/_header.scss
@@ -1,17 +1,18 @@
+
 /*==================== HEADER ====================*/
 .header{
     position: fixed;
     top:0;
     left:0;
     width: 100%;
-    padding-top: 50px;
+    padding: 4vw 7vw 0 7vw;
     color:$color-white;
-    font-size: 1.5rem;
     font-weight: 400;
     z-index: 99;
     .header-logo{
+        position: relative;
         &__img{
-            width:25px;
+            width:1.953vw;
             transition: 0.5s;
             cursor: pointer;
             &:hover{
@@ -20,7 +21,21 @@
         }
         &__text{
             font-weight: 500;
-            margin-left: 15px;
+            margin-left: 1vw;
+        }
+        &__before{
+            position:absolute;
+            top:8px;
+            left:8px;
+            width:100px;
+            height:100px;
+            border-radius:100%;
+            opacity: 0;
+            visibility: hidden;
+        }
+        .light-click{
+            background:$color-light;
+            animation: lightclick 500ms  ease;
         }
     }
     .header-project{
