--- a/client/src/scss/pages/_noise.scss
+++ b/client/src/scss/pages/_noise.scss
@@ -4,7 +4,7 @@
     &::before {
         position: fixed;
         top: 0;
-        left: 0;
+        left: -1px;
         width: 100vw;
         height: 100vh;
         content: "";
