--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -29,8 +29,7 @@ body {
   color: #ffffff;
   overflow-x: hidden;
   width: 100%;
-  height: 100%;
-  pointer-events: none; }
+  height: 100%; }
 
 .huy {
   color: red; }
@@ -201,34 +200,50 @@ h1, h2, h3 {
   .hover-cursor:hover ~ .cursor {
     transform: translate(-50%, -50%) scale(8); }
 
-.cursor {
-  height: 50px;
-  width: 50px;
-  border: 2px solid var(--color-white);
-  border-radius: 50%;
-  position: absolute;
-  transform-origin: 100% 100%;
-  box-sizing: border-box;
-  transition: opacity 1s ease;
-  backdrop-filter: grayscale(1);
+.cursor, .follower {
+  will-change: transform;
+  position: fixed;
+  top: 0;
+  left: 0;
   pointer-events: none;
-  z-index: 999; }
+  border-radius: 50%;
+  mix-blend-mode: difference;
+  -webkit-transform: scale(1);
+  transform: scale(1); }
+
+.cursor {
+  width: 8px;
+  height: 8px;
+  z-index: 999;
+  background-color: var(--color-white); }
+
+.cursor.is-active {
+  -webkit-transform: scale(0);
+  transform: scale(0); }
 
 .follower {
-  height: 8px;
-  width: 8px;
-  background: var(--color-white);
-  border-radius: 50%;
-  position: absolute;
-  transform: translate(-50%, -50%);
-  transition: opacity .2s ease;
-  z-index: 999; }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 48px;
+  height: 48px;
+  border: 1px solid var(--color-white);
+  z-index: 998;
+  -webkit-transition: -webkit-transform .3s;
+  transition: -webkit-transform .3s;
+  transition: transform .3s;
+  transition: transform .3s, -webkit-transform .3s; }
 
-.cursorBlock {
-  opacity: 1; }
-
-.cursorNone {
-  opacity: 0; }
+.follower.is-active {
+  background-color: var(--color-white);
+  -webkit-transform: scale(1.8);
+  transform: scale(1.8); }
 
 @media (max-width: 900px) {
   .hover-cursor {
