--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -15,7 +15,7 @@ body {
     overflow-x: hidden;
     width: 100%;
     height: 100%;
-    pointer-events: none;
+    // pointer-events: none;
 }
 .huy{
     color:red
