--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -144,8 +144,7 @@ h1, h2, h3 {
     position: relative; }
     .header .header-logo__img {
       width: 1.953vw;
-      transition: 0.5s;
-      cursor: pointer; }
+      transition: 0.5s; }
       .header .header-logo__img:hover {
         transform: scale(1.1); }
     .header .header-logo__text {
@@ -196,8 +195,15 @@ h1, h2, h3 {
 
 /*==================== CURSOR ====================*/
 .hover-cursor {
-  transition: all 0.3s ease; }
+  transition: 0.5s;
+  cursor: none !important; }
   .hover-cursor:hover ~ .cursor {
+    transform: translate(-50%, -50%) scale(8); }
+
+.hover-cursor-trans {
+  transition: 1s;
+  cursor: none !important; }
+  .hover-cursor-trans:hover ~ .cursor {
     transform: translate(-50%, -50%) scale(8); }
 
 .cursor, .follower {
@@ -218,8 +224,9 @@ h1, h2, h3 {
   background-color: var(--color-white); }
 
 .cursor.is-active {
-  -webkit-transform: scale(0);
-  transform: scale(0); }
+  -webkit-transform: scale(10);
+  transform: scale(10);
+  opacity: 0; }
 
 .follower {
   display: -webkit-box;
@@ -242,23 +249,18 @@ h1, h2, h3 {
 
 .follower.is-active {
   background-color: var(--color-white);
-  -webkit-transform: scale(1.8);
-  transform: scale(1.8); }
-
-@media (max-width: 900px) {
-  .hover-cursor {
-    width: 100%;
-    padding: 20px 0;
-    display: inline-block; } }
+  -webkit-transform: scale(1.6);
+  transform: scale(1.6); }
 
 /*==================== HOME ====================*/
 .home {
   padding: 200px 0; }
   .home .home-text {
-    width: 80%;
+    width: 60%;
     margin: auto;
     color: var(--color-white); }
     .home .home-text h2 {
       word-break: break-all;
-      font-size: 8rem;
-      margin: 0; }
+      font-size: 7rem;
+      margin: 0;
+      cursor: pointer; }
