--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -25,10 +25,25 @@ section {
 }
 .wrapper{
     position: relative;
+    display:block;
     height:100%;
     background: $color-dark;
     margin: auto;
     transition: opacity 1s ease 1s;
+    .container{
+        height:100%;
+        display:flex;
+        justify-content: center;
+        align-items:center;
+        flex-direction: column;
+    }
+    #my-scroll{
+        height:100vh;
+        &::-webkit-scrollbar {
+            width: 0px!important;
+            display: none!important; 
+        }
+    }
 }
 
 img {
@@ -36,8 +51,10 @@ img {
     width:100%;
 }
 ::-webkit-scrollbar {
-    width: 0px;
+    width: 0px!important;
+    display: none!important; 
 }
+
 /*-------------------------
      RESET Default Styles
  --------------------------*/
