--- a/client/src/scss/layout/_font.scss
+++ b/client/src/scss/layout/_font.scss
@@ -3,7 +3,7 @@
 --------------------------*/
 @font-face {
     font-family: Ogg;
-    src: url("../../asset/fonts/Ogg-Regular.woff2") format("woff2"), url("../../asset/fonts/Ogg-Regular.woff2") format("woff");
+    src: url("../../asset/fonts/Ogg-Roman.otf") format("woff2"), url("../../asset/fonts/Ogg-Roman.otf") format("woff");
     font-weight: 400;
     font-style: normal
 }
