dave light mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,5 +17,6 @@ body.light-theme{
   --color-black:#ffffff;
   --color-light:#1a1a1a;
   --color-dark:#eaeaea;
+  animation: opacity 1.5s ease;
 }
 
