--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -15,6 +15,20 @@
     transform-origin: left top;
     transform: scaleX(1); }
 
+@keyframes lightclick {
+  0% {
+    transform: scale(0);
+    opacity: 0; }
+  100% {
+    transform: scale(50);
+    opacity: 1; } }
+
+@keyframes opacity {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 /*-------------------------- 
       Global Styles
 ---------------------------*/
@@ -171,7 +185,7 @@ h1, h2, h3 {
       height: 100px;
       border-radius: 100%;
       opacity: 0;
-      visibility: hidden; }
+      pointer-events: none; }
     .header .header-logo .light-click {
       background: var(--color-light);
       animation: lightclick 500ms ease; }
@@ -234,7 +248,7 @@ h1, h2, h3 {
   width: 8px;
   height: 8px;
   z-index: 999;
-  background-color: var(--color-white); }
+  background-color: #ffffff; }
 
 .cursor.is-active {
   -webkit-transform: scale(10);
@@ -242,26 +256,17 @@ h1, h2, h3 {
   opacity: 0; }
 
 .follower {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
   width: 48px;
   height: 48px;
-  border: 1px solid var(--color-white);
+  border: 1px solid #ffffff;
   z-index: 998;
-  -webkit-transition: -webkit-transform .3s;
-  transition: -webkit-transform .3s;
-  transition: transform .3s;
-  transition: transform .3s, -webkit-transform .3s; }
+  transition: transform .3s; }
 
 .follower.is-active {
-  background-color: var(--color-white);
+  background-color: #ffffff;
   -webkit-transform: scale(1.6);
   transform: scale(1.6); }
 
