--- a/client/src/scss/layout/_bg-colors.scss
+++ b/client/src/scss/layout/_bg-colors.scss
@@ -6,3 +6,4 @@
 $color-dark:var(--color-dark);
 $color-light:var(--color-light);
 $color-white:var(--color-white);
+$color-black:var(--color-black);
