--- a/client/src/scss/pages/_cursor.scss
+++ b/client/src/scss/pages/_cursor.scss
@@ -28,7 +28,7 @@
     width: 8px;
     height: 8px;
     z-index: 999;
-    background-color: $color-white;
+    background-color: #ffffff;
 }
 .cursor.is-active{
     -webkit-transform: scale(10);
@@ -36,26 +36,17 @@
     opacity: 0;
 }
 .follower {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
     align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
     justify-content: center;
     width: 48px;
     height: 48px;
-    border: 1px solid $color-white;
+    border: 1px solid #ffffff;
     z-index: 998;
-    -webkit-transition: -webkit-transform .3s;
-    transition: -webkit-transform .3s;
     transition: transform .3s;
-    transition: transform .3s, -webkit-transform .3s;
 }
 .follower.is-active{
-    background-color: $color-white;
+    background-color: #ffffff;
     -webkit-transform: scale(1.6);
     transform: scale(1.6)
 }
