--- a/client/src/scss/pages/_header.scss
+++ b/client/src/scss/pages/_header.scss
@@ -29,7 +29,7 @@
       height: 100px;
       border-radius: 100%;
       opacity: 0;
-      visibility: hidden;
+      pointer-events: none;
     }
     .light-click {
       background: $color-light;
