--- a/client/src/scss/pages/_footer.scss
+++ b/client/src/scss/pages/_footer.scss
@@ -8,6 +8,7 @@
     color:$color-white;
     font-weight: 400;
     z-index: 99;
+    visibility:hidden;
     .footer-socials{
         div{
             i{
