--- a/client/src/scss/pages/_header.scss
+++ b/client/src/scss/pages/_header.scss
@@ -7,12 +7,13 @@
   padding: 4vw 7vw 0 7vw;
   color: $color-white;
   font-weight: 400;
+  visibility:hidden;
   z-index: 99;
   .header-logo {
     position: relative;
     &__img {
       width: 1.953vw;
-      transition: 0.5s;
+      // transition: 0.5s;
       &:hover {
         transform: scale(1.1);
       }
@@ -38,5 +39,6 @@
   }
   .header-project {
     cursor: pointer;
+    position: relative;
   }
 }
