--- a/client/src/scss/pages/_footer.scss
+++ b/client/src/scss/pages/_footer.scss
@@ -10,6 +10,7 @@
     z-index: 99;
     visibility:hidden;
     .footer-socials{
+        transition : 0.5s;
         div{
             i{
                 font-size: 1.4vw;
