--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -3,6 +3,7 @@
 .home{
     padding:30vh 0 40vh 0;
     width:100vw;
+    transition:0.5s;
     .home-text{
         width: 65%;
         margin:auto;
