--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -90,6 +90,7 @@ a:hover{
 }
 h1,h2,h3{
     font-family: Ogg, "Cormorant Upright", serif;
+    margin: 0;
 }
 @media (min-width: 1400px){
     .container {
