--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -1,7 +1,7 @@
 /*==================== HOME ====================*/
 
 .home{
-    padding:30vh 0 40vh 0;
+    padding:15vw 0 17vw 0 ;
     width:100vw;
     transition:0.5s;
     .home-text{
