--- a/client/src/scss/global/_mixins.scss
+++ b/client/src/scss/global/_mixins.scss
@@ -87,3 +87,14 @@
         opacity: 1;
     }
 }
+@keyframes closeMenu {
+    0% {
+        opacity: 0;
+        transform:translateY(-4vw)
+    }
+
+    100% {
+        opacity: 1;
+        transform:translateY(0)
+    }
+}
