--- a/client/src/scss/pages/_menu.scss
+++ b/client/src/scss/pages/_menu.scss
@@ -17,7 +17,9 @@
         .container{
             padding: 0;
             .menuProduct{
+                cursor: none;
                 position:relative;
+                margin-bottom: 40px;
                 &__img{
                     width: 100%;
                     height:15vw;
@@ -27,6 +29,10 @@
                         -o-object-fit: cover;
                         object-fit: cover;
                         image-rendering: -webkit-optimize-contrast;
+                    }
+                    &:hover{
+                        filter: contrast(0.6);
+                        transition: 0.5s;
                     }
                 }
                 &__name{
@@ -39,9 +45,6 @@
                         color:$color-dark
                     }
                 }
-            }
-            .menuProduct + .menuProduct{
-                margin-top: 2.5vw;
             }
         }
     }
