--- a/client/src/scss/pages/_cursor.scss
+++ b/client/src/scss/pages/_cursor.scss
@@ -35,6 +35,11 @@
     transform: scale(10);
     opacity: 0;
 }
+.cursor.is-product{
+    -webkit-transform: scale(10);
+    transform: scale(10);
+    opacity: 0;
+}
 .follower {
     display: flex;
     align-items: center;
@@ -49,4 +54,30 @@
     background-color: #ffffff;
     -webkit-transform: scale(1.6);
     transform: scale(1.6)
+}
+.follower.is-product{
+    background-color: #6d6d6d;
+    -webkit-transform: scale(2);
+    transform: scale(2);
+    border:none;
+    &::before{
+        content:"View";
+        font-family: 'Poppins', sans-serif;
+        font-weight: 100;
+        font-size: 0.6vw!important;
+        letter-spacing: 0.1vw;
+        color:$color-white;
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform:translate(-50%,-50%);
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width:100%;
+        height:100%;
+        animation: opacity 1s ease-out ;
+    }
+
 }
