--- a/client/src/scss/pages/_menu.scss
+++ b/client/src/scss/pages/_menu.scss
@@ -42,7 +42,8 @@
                     h3{
                         font-family: 'vladimir', sans-serif;
                         font-size: 3vw;
-                        color:$color-dark
+                        color:$color-dark;
+                        transition:0.5s;
                     }
                 }
             }
