--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -311,6 +311,8 @@ h1, h2, h3 {
   border: 1px solid #ffffff;
   z-index: 998;
   transition: transform .3s; }
+  .follower__text {
+    opacity: 0; }
 
 .follower.is-active {
   background-color: #ffffff;
@@ -318,17 +320,18 @@ h1, h2, h3 {
   transform: scale(1.6); }
 
 .follower.is-product {
-  background-color: #6d6d6d;
+  mix-blend-mode: unset;
+  background-color: #ffffffd3;
   -webkit-transform: scale(2);
   transform: scale(2);
   border: none; }
-  .follower.is-product::before {
-    content: "View";
+  .follower.is-product .follower__text {
+    opacity: 1;
     font-family: 'Poppins', sans-serif;
     font-weight: 100;
     font-size: 0.6vw !important;
     letter-spacing: 0.1vw;
-    color: var(--color-white);
+    color: #000000;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -336,10 +339,7 @@ h1, h2, h3 {
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    animation: opacity 1s ease-out; }
+    justify-content: center; }
 
 /*==================== MENU ====================*/
 .menu {
@@ -361,7 +361,7 @@ h1, h2, h3 {
       .menu .menuProducts .container .menuProduct {
         cursor: none;
         position: relative;
-        margin-bottom: 40px; }
+        margin-bottom: 50px; }
         .menu .menuProducts .container .menuProduct__img {
           width: 100%;
           height: 15vw;
