--- a/client/src/scss/pages/_cursor.scss
+++ b/client/src/scss/pages/_cursor.scss
@@ -49,6 +49,9 @@
     border: 1px solid #ffffff;
     z-index: 998;
     transition: transform .3s;
+    &__text{
+        opacity: 0;
+    }
 }
 .follower.is-active{
     background-color: #ffffff;
@@ -56,17 +59,18 @@
     transform: scale(1.6)
 }
 .follower.is-product{
-    background-color: #6d6d6d;
+    mix-blend-mode: unset;
+    background-color: #ffffffd3;
     -webkit-transform: scale(2);
     transform: scale(2);
     border:none;
-    &::before{
-        content:"View";
+    .follower__text{
+        opacity: 1;
         font-family: 'Poppins', sans-serif;
         font-weight: 100;
         font-size: 0.6vw!important;
         letter-spacing: 0.1vw;
-        color:$color-white;
+        color:#000000;
         position:absolute;
         top:50%;
         left:50%;
@@ -75,9 +79,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        width:100%;
-        height:100%;
-        animation: opacity 1s ease-out ;
     }
 
 }
