--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -48,8 +48,8 @@ img {
     display: none!important; 
 }
 .backgroundBlur {
-    background: $color-dark;
-    opacity:0.8;
+    background: #00000091;
+    // opacity:0.5;
     height: 100%;
     left: 0;
     position: fixed;
