--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -98,8 +98,7 @@ img {
   display: none !important; }
 
 .backgroundBlur {
-  background: var(--color-dark);
-  opacity: 0.8;
+  background: #00000091;
   height: 100%;
   left: 0;
   position: fixed;
@@ -217,16 +216,19 @@ h1, h2, h3 {
       margin-left: 1vw; }
     .header .header-logo__before {
       position: absolute;
-      top: 8px;
-      left: 8px;
+      top: -28px;
+      left: -33px;
       width: 100px;
       height: 100px;
       border-radius: 100%;
-      opacity: 0;
-      pointer-events: none; }
+      opacity: 1;
+      transition: 0.8s ease-in-out;
+      transform: scale(0);
+      pointer-events: none;
+      background: var(--color-light); }
     .header .header-logo .light-click {
-      background: var(--color-light);
-      animation: lightclick 500ms ease; }
+      transform: scale(50);
+      transition: 0.8s ease-in-out; }
   .header .header-project {
     cursor: pointer;
     position: relative; }
@@ -378,7 +380,7 @@ h1, h2, h3 {
           position: absolute;
           bottom: -2vw;
           right: 0; }
-          .menu .menuProducts .container .menuProduct__name h3 {
+          .menu .menuProducts .container .menuProduct__name h2 {
             font-family: 'vladimir', sans-serif;
             font-size: 3vw;
             color: var(--color-dark);
