--- a/client/src/scss/pages/_header.scss
+++ b/client/src/scss/pages/_header.scss
@@ -24,17 +24,20 @@
     }
     &__before {
       position: absolute;
-      top: 8px;
-      left: 8px;
+      top: -28px;
+      left: -33px;
       width: 100px;
       height: 100px;
       border-radius: 100%;
-      opacity: 0;
+      opacity: 1;
+      transition: 0.8s ease-in-out;
+      transform: scale(0);
       pointer-events: none;
+      background: $color-light;
     }
     .light-click {
-      background: $color-light;
-      animation: lightclick 500ms ease;
+      transform: scale(50);
+      transition: 0.8s ease-in-out;
     }
   }
   .header-project {
