--- a/client/src/scss/module/_footer.scss
+++ b/client/src/scss/module/_footer.scss
@@ -21,3 +21,25 @@
         }
     }
 }
+//table and mobile
+@media (max-width: 1200px){
+    .footer{
+        .footer-socials{
+            div{
+                i {
+                    font-size: 5vw;
+                }
+            }
+            div + div{
+                margin-top: 2vw;
+            }
+        }
+    } 
+}
+//tablet
+@media (min-width: 768px) and (max-width: 1200px) {
+}
+//mobile
+@media (max-width: 768px){
+    
+}
