--- a/client/src/scss/pages/_home.scss
+++ b/client/src/scss/pages/_home.scss
@@ -20,3 +20,23 @@
         }
     }
 }
+//table and mobile
+@media (max-width: 1200px){
+    .home{
+        height:100%;
+        padding: 0;
+        .home-text {
+            h2 {
+                font-size: 7vw;
+                line-height: 10vw;
+            }
+        }
+    } 
+}
+//tablet
+@media (min-width: 768px) and (max-width: 1200px) {
+}
+//mobile
+@media (max-width: 768px){
+    
+}
