--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -15,6 +15,7 @@ body {
     overflow-x: hidden;
     width: 100%;
     height: 100%;
+    background: $color-dark;
     // pointer-events: none;
 }
 .huy{
@@ -101,13 +102,25 @@ h1,h2,h3{
         max-width: 1140px!important;
     }
 }
-@media (min-width: 1200px) {
+//table and mobile
+@media (max-width: 1200px){
+    body{
+        font-size: 2.5vw !important;
+        .cursor,.follower{
+            display:none
+        }
+        .wrapper{
+            height:100vh;
+        }
+    }
 }
-
+//tablet
 @media (min-width: 768px) and (max-width: 1200px) {
-    
+    body {
+        font-size: 2.5vw !important;
+    }
 }
-
-@include xs-sm-screens {
-
+//mobile
+@media (max-width: 768px){
+    
 }
