--- a/client/src/scss/style.scss
+++ b/client/src/scss/style.scss
@@ -15,7 +15,8 @@
 @import "module/noise";
 @import "module/cursor";
 @import "module/menu";
-@import "module/loader";
+@import "module/preloader";
+@import "module/loading";
 
 // Pages
 @import "pages/home";
