--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -107,7 +107,9 @@ section {
   display: block;
   background: var(--color-dark);
   margin: auto;
-  transition: opacity 1s ease 1s; }
+  transition: opacity 1s ease 1s;
+  top: 0;
+  left: 0; }
   .wrapper .container {
     display: flex;
     justify-content: center;
@@ -506,7 +508,7 @@ h1, h2, h3 {
   .arrowDark {
     filter: invert(0) !important; } }
 
-/*==================== LOADER ====================*/
+/*==================== PRELOADER ====================*/
 #preloader {
   position: absolute;
   display: flex !important;
@@ -515,6 +517,7 @@ h1, h2, h3 {
   width: 100%;
   height: 100vh;
   z-index: 999;
+  pointer-events: none;
   background-color: var(--color-dark);
   flex-direction: column; }
   #preloader svg {
@@ -547,6 +550,23 @@ h1, h2, h3 {
   #preloader #percent {
     margin-top: 3.5vw;
     font-size: 3vw; } }
+
+/*==================== LOADING ====================*/
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: #f9fafb;
+  transition: 0.8s; }
+  .loading .page-transition {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%; }
 
 /*==================== HOME ====================*/
 .home {
