--- a/client/src/scss/global/_global.scss
+++ b/client/src/scss/global/_global.scss
@@ -31,6 +31,8 @@ section {
     background: $color-dark;
     margin: auto;
     transition: opacity 1s ease 1s;
+    top: 0;
+    left:0;
     .container{
         // height:100%;
         display:flex;
