--- a/client/src/scss/module/_preloader.scss
+++ b/client/src/scss/module/_preloader.scss
@@ -1,4 +1,4 @@
-/*==================== LOADER ====================*/
+/*==================== PRELOADER ====================*/
 #preloader{
     position: absolute;
     display: flex!important;
@@ -7,6 +7,7 @@
     width: 100%;
     height: 100vh;
     z-index: 999;
+    pointer-events: none;
     background-color: $color-dark;
     flex-direction: column;
     svg{
