--- a/client/src/asset/css/style.css
+++ b/client/src/asset/css/style.css
@@ -55,6 +55,16 @@
     opacity: 1;
     transform: translateY(0); } }
 
+@keyframes animationLoadRouter {
+  0% {
+    transform: translateY(100%); }
+  30% {
+    transform: translateY(0); }
+  70% {
+    transform: translateY(100%); }
+  100% {
+    transform: translateY(100%); } }
+
 @keyframes loader1 {
   0% {
     opacity: 0;
@@ -243,7 +253,7 @@ h1, h2, h3 {
   color: var(--color-white);
   font-weight: 400;
   visibility: hidden;
-  z-index: 99; }
+  z-index: 98; }
   .header .header-logo {
     position: relative; }
     .header .header-logo__img {
@@ -274,7 +284,7 @@ h1, h2, h3 {
 
 @media (max-width: 1200px) {
   .header .header-logo__img {
-    width: 4vw; }
+    width: 4.5vw; }
   .header .header-logo__text {
     margin-left: 2vw; } }
 
@@ -287,7 +297,7 @@ h1, h2, h3 {
   padding: 0 7vw 4vw 7vw;
   color: var(--color-white);
   font-weight: 400;
-  z-index: 99;
+  z-index: 98;
   visibility: hidden; }
   .footer .footer-socials {
     transition: 0.5s; }
@@ -560,13 +570,38 @@ h1, h2, h3 {
   z-index: 100;
   width: 100%;
   height: 100vh;
-  background-color: #f9fafb;
+  background-color: var(--color-white);
   transition: 0.8s; }
   .loading .page-transition {
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%; }
+
+.loadRouter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 100;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-white);
+  transform: translateY(100%);
+  transition: 0.8s; }
+
+.animationLoadRouter {
+  animation: animationLoadRouter 3s ease; }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  z-index: 99;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-dark); }
 
 /*==================== HOME ====================*/
 .home {
